crates/java-syntax/tests/snapshots/parser_snapshots__parse_annotation_with_default.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
@interface Config {
    String name() default "unknown";
    int retryCount() default 3;
}

TOKENS:
AT "@"
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "Config"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "name"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
DEFAULT_KW "default"
WHITESPACE " "
STRING_LITERAL "\"unknown\""
SEMICOLON ";"
WHITESPACE "\n    "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "retryCount"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
DEFAULT_KW "default"
WHITESPACE " "
INTEGER_LITERAL "3"
SEMICOLON ";"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..91
  ANNOTATION_TYPE_DECL@0..90
    AT@0..1 "@"
    INTERFACE_KW@1..10 "interface"
    WHITESPACE@10..11 " "
    IDENTIFIER@11..17 "Config"
    WHITESPACE@17..18 " "
    ANNOTATION_TYPE_BODY@18..90
      L_BRACE@18..19 "{"
      WHITESPACE@19..24 "\n    "
      ANNOTATION_TYPE_ELEMENT_DECL@24..56
        TYPE@24..30
          QUALIFIED_NAME@24..30
            IDENTIFIER@24..30 "String"
        WHITESPACE@30..31 " "
        IDENTIFIER@31..35 "name"
        L_PAREN@35..36 "("
        R_PAREN@36..37 ")"
        WHITESPACE@37..38 " "
        DEFAULT_KW@38..45 "default"
        WHITESPACE@45..46 " "
        LITERAL@46..55
          STRING_LITERAL@46..55 "\"unknown\""
        SEMICOLON@55..56 ";"
      WHITESPACE@56..61 "\n    "
      ANNOTATION_TYPE_ELEMENT_DECL@61..88
        TYPE@61..64
          INT_KW@61..64 "int"
        WHITESPACE@64..65 " "
        IDENTIFIER@65..75 "retryCount"
        L_PAREN@75..76 "("
        R_PAREN@76..77 ")"
        WHITESPACE@77..78 " "
        DEFAULT_KW@78..85 "default"
        WHITESPACE@85..86 " "
        LITERAL@86..87
          INTEGER_LITERAL@86..87 "3"
        SEMICOLON@87..88 ";"
      WHITESPACE@88..89 "\n"
      R_BRACE@89..90 "}"
  WHITESPACE@90..91 "\n"
