crates/java-syntax/tests/snapshots/parser_snapshots__parse_array_initialize_expr.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    String[] STRING_ARRAY = {"a", "b", "c"};
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
IDENTIFIER "String"
L_BRACKET "["
R_BRACKET "]"
WHITESPACE " "
IDENTIFIER "STRING_ARRAY"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
L_BRACE "{"
STRING_LITERAL "\"a\""
COMMA ","
WHITESPACE " "
STRING_LITERAL "\"b\""
COMMA ","
WHITESPACE " "
STRING_LITERAL "\"c\""
R_BRACE "}"
SEMICOLON ";"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..60
  CLASS_DECL@0..59
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..59
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      FIELD_DECL@17..57
        TYPE@17..25
          QUALIFIED_NAME@17..23
            IDENTIFIER@17..23 "String"
          DIMENSIONS@23..25
            DIMENSION@23..25
              L_BRACKET@23..24 "["
              R_BRACKET@24..25 "]"
        WHITESPACE@25..26 " "
        VARIABLE_DECLARATOR_LIST@26..56
          VARIABLE_DECLARATOR@26..56
            IDENTIFIER@26..38 "STRING_ARRAY"
            WHITESPACE@38..39 " "
            EQUAL@39..40 "="
            WHITESPACE@40..41 " "
            ARRAY_INITIALIZER@41..56
              L_BRACE@41..42 "{"
              LITERAL@42..45
                STRING_LITERAL@42..45 "\"a\""
              COMMA@45..46 ","
              WHITESPACE@46..47 " "
              LITERAL@47..50
                STRING_LITERAL@47..50 "\"b\""
              COMMA@50..51 ","
              WHITESPACE@51..52 " "
              LITERAL@52..55
                STRING_LITERAL@52..55 "\"c\""
              R_BRACE@55..56 "}"
        SEMICOLON@56..57 ";"
      WHITESPACE@57..58 "\n"
      R_BRACE@58..59 "}"
  WHITESPACE@59..60 "\n"
