crates/java-syntax/tests/snapshots/parser_snapshots__parse_array_type_on_declarator.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { int a[]; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "a"
L_BRACKET "["
R_BRACKET "]"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..20
  CLASS_DECL@0..20
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..20
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      FIELD_DECL@10..18
        TYPE@10..13
          INT_KW@10..13 "int"
        WHITESPACE@13..14 " "
        VARIABLE_DECLARATOR_LIST@14..17
          VARIABLE_DECLARATOR@14..17
            IDENTIFIER@14..15 "a"
            DIMENSIONS@15..17
              DIMENSION@15..17
                L_BRACKET@15..16 "["
                R_BRACKET@16..17 "]"
        SEMICOLON@17..18 ";"
      WHITESPACE@18..19 " "
      R_BRACE@19..20 "}"
