crates/java-syntax/tests/snapshots/parser_snapshots__parse_array_type_on_type.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { int[] a; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
L_BRACKET "["
R_BRACKET "]"
WHITESPACE " "
IDENTIFIER "a"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..20
  CLASS_DECL@0..20
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..20
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      FIELD_DECL@10..18
        TYPE@10..15
          INT_KW@10..13 "int"
          DIMENSIONS@13..15
            DIMENSION@13..15
              L_BRACKET@13..14 "["
              R_BRACKET@14..15 "]"
        WHITESPACE@15..16 " "
        VARIABLE_DECLARATOR_LIST@16..17
          VARIABLE_DECLARATOR@16..17
            IDENTIFIER@16..17 "a"
        SEMICOLON@17..18 ";"
      WHITESPACE@18..19 " "
      R_BRACE@19..20 "}"
