crates/java-syntax/tests/snapshots/parser_snapshots__parse_assert_statement_missing_reason.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A {
    void func() {
        assert true:;
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
ASSERT_KW "assert"
WHITESPACE " "
TRUE_LITERAL "true"
COLON ":"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..58
  CLASS_DECL@0..57
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..57
      L_BRACE@8..9 "{"
      WHITESPACE@9..14 "\n    "
      METHOD_DECL@14..55
        VOID_KW@14..18 "void"
        WHITESPACE@18..19 " "
        IDENTIFIER@19..23 "func"
        FORMAL_PARAMETERS@23..25
          L_PAREN@23..24 "("
          R_PAREN@24..25 ")"
        WHITESPACE@25..26 " "
        BLOCK@26..55
          L_BRACE@26..27 "{"
          WHITESPACE@27..36 "\n        "
          ASSERT_STMT@36..49
            ASSERT_KW@36..42 "assert"
            WHITESPACE@42..43 " "
            LITERAL@43..47
              TRUE_LITERAL@43..47 "true"
            COLON@47..48 ":"
            SEMICOLON@48..49 ";"
          WHITESPACE@49..54 "\n    "
          R_BRACE@54..55 "}"
      WHITESPACE@55..56 "\n"
      R_BRACE@56..57 "}"
  WHITESPACE@57..58 "\n"
