crates/java-syntax/tests/snapshots/parser_snapshots__parse_assign_expr.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void test() {
        a = 1;
        a += 1;
        a -= 1;
        a /= 1;
        a *= 1;
        a |= 1;
        a %= 1;
        a &= 1;
        a ^=1;
        a >>= 1;
        a <<= 1;
        a >>>= 1;
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
IDENTIFIER "a"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE "\n        "
IDENTIFIER "a"
WHITESPACE " "
PLUS_EQUAL "+="
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE "\n        "
IDENTIFIER "a"
WHITESPACE " "
MINUS_EQUAL "-="
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE "\n        "
IDENTIFIER "a"
WHITESPACE " "
DIVIDE_EQUAL "/="
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE "\n        "
IDENTIFIER "a"
WHITESPACE " "
MULTIPLE_EQUAL "*="
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE "\n        "
IDENTIFIER "a"
WHITESPACE " "
OR_EQUAL "|="
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE "\n        "
IDENTIFIER "a"
WHITESPACE " "
MODULO_EQUAL "%="
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE "\n        "
IDENTIFIER "a"
WHITESPACE " "
AND_EQUAL "&="
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE "\n        "
IDENTIFIER "a"
WHITESPACE " "
XOR_EQUAL "^="
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE "\n        "
IDENTIFIER "a"
WHITESPACE " "
RIGHT_SHIFT_EQUAL ">>="
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE "\n        "
IDENTIFIER "a"
WHITESPACE " "
LEFT_SHIFT_EQUAL "<<="
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE "\n        "
IDENTIFIER "a"
WHITESPACE " "
UNSIGNED_RIGHT_SHIFT_EQUAL ">>>="
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..233
  CLASS_DECL@0..232
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..232
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..230
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "test"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BLOCK@29..230
          L_BRACE@29..30 "{"
          WHITESPACE@30..39 "\n        "
          EXPRESSION_STMT@39..45
            ASSIGN_EXPR@39..44
              LITERAL@39..40
                IDENTIFIER@39..40 "a"
              WHITESPACE@40..41 " "
              EQUAL@41..42 "="
              WHITESPACE@42..43 " "
              LITERAL@43..44
                INTEGER_LITERAL@43..44 "1"
            SEMICOLON@44..45 ";"
          WHITESPACE@45..54 "\n        "
          EXPRESSION_STMT@54..61
            ASSIGN_EXPR@54..60
              LITERAL@54..55
                IDENTIFIER@54..55 "a"
              WHITESPACE@55..56 " "
              PLUS_EQUAL@56..58 "+="
              WHITESPACE@58..59 " "
              LITERAL@59..60
                INTEGER_LITERAL@59..60 "1"
            SEMICOLON@60..61 ";"
          WHITESPACE@61..70 "\n        "
          EXPRESSION_STMT@70..77
            ASSIGN_EXPR@70..76
              LITERAL@70..71
                IDENTIFIER@70..71 "a"
              WHITESPACE@71..72 " "
              MINUS_EQUAL@72..74 "-="
              WHITESPACE@74..75 " "
              LITERAL@75..76
                INTEGER_LITERAL@75..76 "1"
            SEMICOLON@76..77 ";"
          WHITESPACE@77..86 "\n        "
          EXPRESSION_STMT@86..93
            ASSIGN_EXPR@86..92
              LITERAL@86..87
                IDENTIFIER@86..87 "a"
              WHITESPACE@87..88 " "
              DIVIDE_EQUAL@88..90 "/="
              WHITESPACE@90..91 " "
              LITERAL@91..92
                INTEGER_LITERAL@91..92 "1"
            SEMICOLON@92..93 ";"
          WHITESPACE@93..102 "\n        "
          EXPRESSION_STMT@102..109
            ASSIGN_EXPR@102..108
              LITERAL@102..103
                IDENTIFIER@102..103 "a"
              WHITESPACE@103..104 " "
              MULTIPLE_EQUAL@104..106 "*="
              WHITESPACE@106..107 " "
              LITERAL@107..108
                INTEGER_LITERAL@107..108 "1"
            SEMICOLON@108..109 ";"
          WHITESPACE@109..118 "\n        "
          EXPRESSION_STMT@118..125
            ASSIGN_EXPR@118..124
              LITERAL@118..119
                IDENTIFIER@118..119 "a"
              WHITESPACE@119..120 " "
              OR_EQUAL@120..122 "|="
              WHITESPACE@122..123 " "
              LITERAL@123..124
                INTEGER_LITERAL@123..124 "1"
            SEMICOLON@124..125 ";"
          WHITESPACE@125..134 "\n        "
          EXPRESSION_STMT@134..141
            ASSIGN_EXPR@134..140
              LITERAL@134..135
                IDENTIFIER@134..135 "a"
              WHITESPACE@135..136 " "
              MODULO_EQUAL@136..138 "%="
              WHITESPACE@138..139 " "
              LITERAL@139..140
                INTEGER_LITERAL@139..140 "1"
            SEMICOLON@140..141 ";"
          WHITESPACE@141..150 "\n        "
          EXPRESSION_STMT@150..157
            ASSIGN_EXPR@150..156
              LITERAL@150..151
                IDENTIFIER@150..151 "a"
              WHITESPACE@151..152 " "
              AND_EQUAL@152..154 "&="
              WHITESPACE@154..155 " "
              LITERAL@155..156
                INTEGER_LITERAL@155..156 "1"
            SEMICOLON@156..157 ";"
          WHITESPACE@157..166 "\n        "
          EXPRESSION_STMT@166..172
            ASSIGN_EXPR@166..171
              LITERAL@166..167
                IDENTIFIER@166..167 "a"
              WHITESPACE@167..168 " "
              XOR_EQUAL@168..170 "^="
              LITERAL@170..171
                INTEGER_LITERAL@170..171 "1"
            SEMICOLON@171..172 ";"
          WHITESPACE@172..181 "\n        "
          EXPRESSION_STMT@181..189
            ASSIGN_EXPR@181..188
              LITERAL@181..182
                IDENTIFIER@181..182 "a"
              WHITESPACE@182..183 " "
              RIGHT_SHIFT_EQUAL@183..186 ">>="
              WHITESPACE@186..187 " "
              LITERAL@187..188
                INTEGER_LITERAL@187..188 "1"
            SEMICOLON@188..189 ";"
          WHITESPACE@189..198 "\n        "
          EXPRESSION_STMT@198..206
            ASSIGN_EXPR@198..205
              LITERAL@198..199
                IDENTIFIER@198..199 "a"
              WHITESPACE@199..200 " "
              LEFT_SHIFT_EQUAL@200..203 "<<="
              WHITESPACE@203..204 " "
              LITERAL@204..205
                INTEGER_LITERAL@204..205 "1"
            SEMICOLON@205..206 ";"
          WHITESPACE@206..215 "\n        "
          EXPRESSION_STMT@215..224
            ASSIGN_EXPR@215..223
              LITERAL@215..216
                IDENTIFIER@215..216 "a"
              WHITESPACE@216..217 " "
              UNSIGNED_RIGHT_SHIFT_EQUAL@217..221 ">>>="
              WHITESPACE@221..222 " "
              LITERAL@222..223
                INTEGER_LITERAL@222..223 "1"
            SEMICOLON@223..224 ";"
          WHITESPACE@224..229 "\n    "
          R_BRACE@229..230 "}"
      WHITESPACE@230..231 "\n"
      R_BRACE@231..232 "}"
  WHITESPACE@232..233 "\n"
