crates/java-syntax/tests/snapshots/parser_snapshots__parse_binary_expr.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void test() {
        if (a && b || c) {}
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
IF_KW "if"
WHITESPACE " "
L_PAREN "("
IDENTIFIER "a"
WHITESPACE " "
AND "&&"
WHITESPACE " "
IDENTIFIER "b"
WHITESPACE " "
OR "||"
WHITESPACE " "
IDENTIFIER "c"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..67
  CLASS_DECL@0..66
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..66
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..64
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "test"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BLOCK@29..64
          L_BRACE@29..30 "{"
          WHITESPACE@30..39 "\n        "
          IF_STMT@39..58
            IF_KW@39..41 "if"
            WHITESPACE@41..42 " "
            PARENTHESIZED_EXPR@42..55
              L_PAREN@42..43 "("
              BINARY_EXPR@43..54
                BINARY_EXPR@43..49
                  LITERAL@43..44
                    IDENTIFIER@43..44 "a"
                  WHITESPACE@44..45 " "
                  AND@45..47 "&&"
                  WHITESPACE@47..48 " "
                  LITERAL@48..49
                    IDENTIFIER@48..49 "b"
                WHITESPACE@49..50 " "
                OR@50..52 "||"
                WHITESPACE@52..53 " "
                LITERAL@53..54
                  IDENTIFIER@53..54 "c"
              R_PAREN@54..55 ")"
            WHITESPACE@55..56 " "
            BLOCK@56..58
              L_BRACE@56..57 "{"
              R_BRACE@57..58 "}"
          WHITESPACE@58..63 "\n    "
          R_BRACE@63..64 "}"
      WHITESPACE@64..65 "\n"
      R_BRACE@65..66 "}"
  WHITESPACE@66..67 "\n"
