crates/java-syntax/tests/snapshots/parser_snapshots__parse_c_style_array.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A {
    void func(String args[]) {}
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "args"
L_BRACKET "["
R_BRACKET "]"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..44
  CLASS_DECL@0..43
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..43
      L_BRACE@8..9 "{"
      WHITESPACE@9..14 "\n    "
      METHOD_DECL@14..41
        VOID_KW@14..18 "void"
        WHITESPACE@18..19 " "
        IDENTIFIER@19..23 "func"
        FORMAL_PARAMETERS@23..38
          L_PAREN@23..24 "("
          FORMAL_PARAMETER@24..37
            TYPE@24..30
              QUALIFIED_NAME@24..30
                IDENTIFIER@24..30 "String"
            WHITESPACE@30..31 " "
            IDENTIFIER@31..35 "args"
            DIMENSIONS@35..37
              DIMENSION@35..37
                L_BRACKET@35..36 "["
                R_BRACKET@36..37 "]"
          R_PAREN@37..38 ")"
        WHITESPACE@38..39 " "
        BLOCK@39..41
          L_BRACE@39..40 "{"
          R_BRACE@40..41 "}"
      WHITESPACE@41..42 "\n"
      R_BRACE@42..43 "}"
  WHITESPACE@43..44 "\n"
